--- a/job/manifests.yaml
+++ b/job/manifests.yaml
@@ -1,3 +1,14 @@
+apiVersion: v1
+kind: Pod
+metadata:
+  name: nginx
+spec:
+  containers:
+  - name: nginx
+    image: nginx:1.14.2
+    ports:
+    - containerPort: 80
+---
 apiVersion: batch/v1
 kind: Job
 metadata:
