--- a/job/manifests.yaml
+++ b/job/manifests.yaml
@@ -4,8 +4,8 @@ metadata:
   name: nginx
 spec:
   containers:
-  - name: nginx
-    image: nginx:1.14.3
+  - name: nginx1
+    image: nginx:1.14.2
     ports:
     - containerPort: 80
 ---
