--- a/job/manifests.yaml
+++ b/job/manifests.yaml
@@ -4,10 +4,10 @@ metadata:
   name: nginx
 spec:
   containers:
-  - name: nginx1
+  - name: nginx
     image: nginx:1.14.2
     ports:
-    - containerPort: 80
+    - containerPort: 81
 ---
 apiVersion: batch/v1
 kind: Job
