--- a/job/manifests.yaml
+++ b/job/manifests.yaml
@@ -15,7 +15,7 @@ metadata:
   generateName: app-slack-notification-
   annotations:
     argocd.argoproj.io/hook: PostSync
-    # argocd.argoproj.io/hook-delete-policy: HookSucceeded
+    argocd.argoproj.io/hook-delete-policy: HookSucceeded
 spec:
   template:
     spec:
