--- a/job/manifests.yaml
+++ b/job/manifests.yaml
@@ -12,10 +12,10 @@ spec:
 apiVersion: batch/v1
 kind: Job
 metadata:
-  generateName: app-slack-notification-
+  name: app-slack-notification
   annotations:
     argocd.argoproj.io/hook: PostSync
-    argocd.argoproj.io/hook-delete-policy: HookSucceeded
+    # argocd.argoproj.io/hook-delete-policy: HookSucceeded
 spec:
   template:
     spec:
