--- a/job/manifests.yaml
+++ b/job/manifests.yaml
@@ -1,21 +1,10 @@
-apiVersion: v1
-kind: Pod
-metadata:
-  name: nginx
-spec:
-  containers:
-  - name: nginx
-    image: nginx:1.27.0
-    ports:
-    - containerPort: 80
----
 apiVersion: batch/v1
 kind: Job
 metadata:
   name: app-slack-notification
   annotations:
     argocd.argoproj.io/hook: PostSync
-    # argocd.argoproj.io/hook-delete-policy: HookSucceeded
+    argocd.argoproj.io/hook-delete-policy: HookSucceeded
 spec:
   template:
     spec:
