--- a/job/manifests.yaml
+++ b/job/manifests.yaml
@@ -1,3 +1,10 @@
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: test-cm
+data:
+  APP_ENV: test
+---
 apiVersion: batch/v1
 kind: Job
 metadata:
