--- a/job/manifests.yaml
+++ b/job/manifests.yaml
@@ -3,15 +3,16 @@ kind: ConfigMap
 metadata:
   name: test-cm
 data:
-  APP_ENV: test2
+  APP_ENV: test3
 ---
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: app-slack-notification
-  annotations:
-    argocd.argoproj.io/hook: PostSync
-    argocd.argoproj.io/hook-delete-policy: HookSucceeded
+  generateName: app-slack-notification-
+  #name: app-slack-notification
+  #annotations:
+  #  argocd.argoproj.io/hook: PostSync
+  #  argocd.argoproj.io/hook-delete-policy: HookSucceeded
 spec:
   template:
     spec:
