--- a/job/manifests.yaml
+++ b/job/manifests.yaml
@@ -5,22 +5,34 @@ metadata:
 data:
   APP_ENV: test3
 ---
-apiVersion: batch/v1
-kind: Job
+apiVersion: v1
+kind: Pod
 metadata:
-  generateName: app-slack-notification-
-  #name: app-slack-notification
-  #annotations:
-  #  argocd.argoproj.io/hook: PostSync
-  #  argocd.argoproj.io/hook-delete-policy: HookSucceeded
+  name: myapp-pod
+  labels:
+    app.kubernetes.io/name: MyApp
 spec:
-  template:
-    spec:
-      containers:
-      - name: slack-notification
-        image: zerosuxx/alpine
-        command:
-          - echo
-          - "Hello World"
-      restartPolicy: Never
-  backoffLimit: 3
+  initContainers:
+  - name: init-myservice
+    image: busybox:1.28
+    command: ['sh', '-c', "sleep 5"]
+---
+# apiVersion: batch/v1
+# kind: Job
+# metadata:
+#   generateName: app-slack-notification-
+#   #name: app-slack-notification
+#   #annotations:
+#   #  argocd.argoproj.io/hook: PostSync
+#   #  argocd.argoproj.io/hook-delete-policy: HookSucceeded
+# spec:
+#   template:
+#     spec:
+#       containers:
+#       - name: slack-notification
+#         image: zerosuxx/alpine
+#         command:
+#           - echo
+#           - "Hello World"
+#       restartPolicy: Never
+#   backoffLimit: 3
