--- a/job/manifests.yaml
+++ b/job/manifests.yaml
@@ -12,6 +12,10 @@ metadata:
   labels:
     app.kubernetes.io/name: MyApp
 spec:
+  containers:
+  - name: init-myservice
+    image: busybox:1.28
+    command: ['sh', '-c', "sleep 5"]
   initContainers:
   - name: init-myservice
     image: busybox:1.28
