--- a/job/manifests.yaml
+++ b/job/manifests.yaml
@@ -13,7 +13,7 @@ metadata:
     app.kubernetes.io/name: MyApp
 spec:
   containers:
-  - name: init-myservice
+  - name: app
     image: busybox:1.28
     command: ['sh', '-c', "sleep 5"]
   initContainers:
