--- a/job/manifests.yaml
+++ b/job/manifests.yaml
@@ -16,10 +16,7 @@ spec:
   - name: app
     image: busybox:1.28
     command: ['sh', '-c', "sleep 5"]
-  initContainers:
-  - name: init-myservice
-    image: busybox:1.28
-    command: ['sh', '-c', "sleep 5"]
+  restartPolicy: Never
 ---
 # apiVersion: batch/v1
 # kind: Job
