--- a/job/manifests.yaml
+++ b/job/manifests.yaml
@@ -24,9 +24,9 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: app-slack-notification-3
-  annotations:
-   argocd.argoproj.io/hook: PostSync
-   argocd.argoproj.io/hook-delete-policy: HookSucceeded
+  # annotations:
+   # argocd.argoproj.io/hook: PostSync
+   # argocd.argoproj.io/hook-delete-policy: HookSucceeded
 spec:
   template:
     spec:
