--- a/job/manifests.yaml
+++ b/job/manifests.yaml
@@ -24,7 +24,8 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: app-slack-notification-4
-  # annotations:
+  annotations:
+    argocd.argoproj.io/sync-options: Force=true,Replace=true
    # argocd.argoproj.io/hook: PostSync
    # argocd.argoproj.io/hook-delete-policy: HookSucceeded
 spec:
