--- a/job/manifests.yaml
+++ b/job/manifests.yaml
@@ -27,7 +27,7 @@ metadata:
   annotations:
     argocd.argoproj.io/sync-options: Force=true,Replace=true
    # argocd.argoproj.io/hook: PostSync
-   # argocd.argoproj.io/hook-delete-policy: HookSucceeded
+   argocd.argoproj.io/hook-delete-policy: HookSucceeded
 spec:
   template:
     spec:
