--- a/job/manifests.yaml
+++ b/job/manifests.yaml
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata:
   name: test-cm
 data:
-  APP_ENV: test9
+  APP_ENV: test10
 # ---
 # apiVersion: v1
 # kind: Pod
@@ -23,10 +23,10 @@ data:
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: app-slack-notification-9
+  name: app-slack-notification-10
   annotations:
-    #argocd.argoproj.io/sync-options: Force=true,Replace=true
-    argocd.argoproj.io/hook: PostSync
+    argocd.argoproj.io/sync-options: Force=true,Replace=true
+    #argocd.argoproj.io/hook: PostSync
     #argocd.argoproj.io/hook-delete-policy: HookSucceeded
 spec:
   template:
@@ -36,6 +36,6 @@ spec:
         image: zerosuxx/alpine
         command:
           - echo
-          - "Hello World 9"
+          - "Hello World 1p"
       restartPolicy: Never
   backoffLimit: 3
