--- a/job/manifests.yaml
+++ b/job/manifests.yaml
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata:
   name: test-cm
 data:
-  APP_ENV: test10
+  APP_ENV: test11
 # ---
 # apiVersion: v1
 # kind: Pod
@@ -23,7 +23,7 @@ data:
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: app-slack-notification-10
+  name: app-slack-notification-11
   annotations:
     argocd.argoproj.io/sync-options: Force=true,Replace=true
     #argocd.argoproj.io/hook: PostSync
@@ -36,6 +36,6 @@ spec:
         image: zerosuxx/alpine
         command:
           - echo
-          - "Hello World 1p"
+          - "Hello World 11"
       restartPolicy: Never
   backoffLimit: 3
