--- a/job/manifests.yaml
+++ b/job/manifests.yaml
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata:
   name: test-cm
 data:
-  APP_ENV: test13
+  APP_ENV: test14
 # ---
 # apiVersion: v1
 # kind: Pod
@@ -23,9 +23,10 @@ data:
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: app-slack-notification-13
+  name: app-slack-notification-14
   annotations:
     argocd.argoproj.io/sync-options: Force=true,Replace=true
+    argocd.argoproj.io/sync-wave: "-1"
     #argocd.argoproj.io/hook: PostSync
     #argocd.argoproj.io/hook-delete-policy: HookSucceeded
 spec:
@@ -36,6 +37,6 @@ spec:
         image: zerosuxx/alpine
         command:
           - echo
-          - "Hello World 13"
+          - "Hello World 14"
       restartPolicy: Never
   backoffLimit: 3
