--- a/job/manifests.yaml
+++ b/job/manifests.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: test-cm
+  name: app-job-1
 data:
-  APP_ENV: test14
+  APP_ENV: test1
 # ---
 # apiVersion: v1
 # kind: Pod
@@ -23,20 +23,20 @@ data:
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: app-slack-notification-14
-  annotations:
-    argocd.argoproj.io/sync-options: Force=true,Replace=true
-    argocd.argoproj.io/sync-wave: "-1"
+  name: app-job-1
+  #annotations:
+    #argocd.argoproj.io/sync-options: Force=true,Replace=true
+    #argocd.argoproj.io/sync-wave: "-1"
     #argocd.argoproj.io/hook: PostSync
     #argocd.argoproj.io/hook-delete-policy: HookSucceeded
 spec:
   template:
     spec:
       containers:
-      - name: slack-notification
+      - name: app-job-1
         image: zerosuxx/alpine
         command:
           - echo
-          - "Hello World 14"
+          - "1"
       restartPolicy: Never
   backoffLimit: 3
