--- a/job/job2.yaml
+++ b/job/job2.yaml
@@ -26,7 +26,7 @@ metadata:
   name: app-job-2
   #annotations:
     #argocd.argoproj.io/sync-options: Force=true,Replace=true
-    #argocd.argoproj.io/sync-wave: "-1"
+    argocd.argoproj.io/sync-wave: "-1"
     #argocd.argoproj.io/hook: PostSync
     #argocd.argoproj.io/hook-delete-policy: HookSucceeded
 spec:
