--- a/job/sts.yaml
+++ b/job/sts.yaml
@@ -22,6 +22,9 @@ spec:
         volumeMounts:
         - name: sts-data-1
           mountPath: /shared
+  persistentVolumeClaimRetentionPolicy:
+    whenDeleted: Deleted
+    whenScaled: Retain
   volumeClaimTemplates:
   - metadata:
       name: sts-data-1
