Update sts.yaml force

--- a/job/sts.yaml
+++ b/job/sts.yaml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: sts-1
+  annotations:
+    argocd.argoproj.io/sync-options: Force=true
 spec:
   #serviceName: "sts"
   replicas: 1
