--- a/kro/app.yaml
+++ b/kro/app.yaml
@@ -2,5 +2,7 @@ apiVersion: kro.run/v1alpha1
 kind: Application
 metadata:
   name: my-application-instance
+  labels:
+    app.kubernetes.io/instance: my-application
 spec:
   name: my-awesome-app
