--- a/kro/app.yaml
+++ b/kro/app.yaml
@@ -4,5 +4,6 @@ metadata:
   name: my-application-instance
   labels:
     app.kubernetes.io/instance: kro-app
+    argocd.argoproj.io/instance: kro-app
 spec:
   name: my-awesome-app
